welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: Missing closing brace `}' assumed here
droite();
^Balin:17: error: ';' expected but 'else' found.
}else{
 ^